--- a/dev/_modules/smac/smac_cli.html
+++ b/dev/_modules/smac/smac_cli.html
@@ -257,6 +257,7 @@
 <span class="kn">from</span> <span class="nn">smac.facade.roar_facade</span> <span class="k">import</span> <span class="n">ROAR</span>
 <span class="kn">from</span> <span class="nn">smac.facade.epils_facade</span> <span class="k">import</span> <span class="n">EPILS</span>
 <span class="kn">from</span> <span class="nn">smac.facade.hydra_facade</span> <span class="k">import</span> <span class="n">Hydra</span>
+<span class="kn">from</span> <span class="nn">smac.facade.psmac_facade</span> <span class="k">import</span> <span class="n">PSMAC</span>
 <span class="kn">from</span> <span class="nn">smac.runhistory.runhistory</span> <span class="k">import</span> <span class="n">RunHistory</span>
 <span class="kn">from</span> <span class="nn">smac.stats.stats</span> <span class="k">import</span> <span class="n">Stats</span>
 <span class="kn">from</span> <span class="nn">smac.optimizer.objective</span> <span class="k">import</span> <span class="n">average_cost</span>
@@ -389,6 +390,16 @@
                 <span class="n">val_set</span><span class="o">=</span><span class="n">main_args_</span><span class="o">.</span><span class="n">hydra_validation</span><span class="p">,</span>
                 <span class="n">incs_per_round</span><span class="o">=</span><span class="n">main_args_</span><span class="o">.</span><span class="n">hydra_incumbents_per_round</span><span class="p">,</span>
                 <span class="n">n_optimizers</span><span class="o">=</span><span class="n">main_args_</span><span class="o">.</span><span class="n">hydra_n_optimizers</span><span class="p">)</span>
+        <span class="k">elif</span> <span class="n">main_args_</span><span class="o">.</span><span class="n">mode</span> <span class="o">==</span> <span class="s2">&quot;PSMAC&quot;</span><span class="p">:</span>
+            <span class="n">optimizer</span> <span class="o">=</span> <span class="n">PSMAC</span><span class="p">(</span>
+                <span class="n">scenario</span><span class="o">=</span><span class="n">scen</span><span class="p">,</span>
+                <span class="n">rng</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">RandomState</span><span class="p">(</span><span class="n">main_args_</span><span class="o">.</span><span class="n">seed</span><span class="p">),</span>
+                <span class="n">run_id</span><span class="o">=</span><span class="n">main_args_</span><span class="o">.</span><span class="n">seed</span><span class="p">,</span>
+                <span class="n">shared_model</span><span class="o">=</span><span class="n">smac_args_</span><span class="o">.</span><span class="n">shared_model</span><span class="p">,</span>
+                <span class="n">validate</span><span class="o">=</span><span class="n">main_args_</span><span class="o">.</span><span class="n">psmac_validate</span><span class="p">,</span>
+                <span class="n">n_optimizers</span><span class="o">=</span><span class="n">main_args_</span><span class="o">.</span><span class="n">hydra_n_optimizers</span><span class="p">,</span>
+                <span class="n">n_incs</span><span class="o">=</span><span class="n">main_args_</span><span class="o">.</span><span class="n">hydra_incumbents_per_round</span><span class="p">,</span>
+            <span class="p">)</span>
         <span class="k">try</span><span class="p">:</span>
             <span class="n">optimizer</span><span class="o">.</span><span class="n">optimize</span><span class="p">()</span>
         <span class="k">except</span> <span class="p">(</span><span class="n">TAEAbortException</span><span class="p">,</span> <span class="n">FirstRunCrashedException</span><span class="p">)</span> <span class="k">as</span> <span class="n">err</span><span class="p">:</span>
