--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -565,6 +565,8 @@
 </li>
       <li><a href="apidoc/smac.stats.stats.html#smac.stats.stats.Stats.get_remaining_ta_runs">get_remaining_ta_runs() (smac.stats.stats.Stats method)</a>
 </li>
+      <li><a href="apidoc/smac.utils.util_funcs.html#smac.utils.util_funcs.get_rng">get_rng() (in module smac.utils.util_funcs)</a>
+</li>
       <li><a href="apidoc/smac.facade.epils_facade.html#smac.facade.epils_facade.EPILS.get_runhistory">get_runhistory() (smac.facade.epils_facade.EPILS method)</a>
 
       <ul>
