--- a/dev/_modules/smac/optimizer/pSMAC.html
+++ b/dev/_modules/smac/optimizer/pSMAC.html
@@ -257,6 +257,7 @@
 
 <span class="n">RUNHISTORY_FILEPATTERN</span> <span class="o">=</span> <span class="s1">&#39;runhistory.json&#39;</span>
 <span class="n">RUNHISTORY_RE</span> <span class="o">=</span> <span class="sa">r</span><span class="s1">&#39;runhistory\.json$&#39;</span>
+<span class="n">VALIDATEDRUNHISTORY_RE</span> <span class="o">=</span> <span class="sa">r</span><span class="s1">&#39;validated_runhistory\.json$&#39;</span>
 
 
 <div class="viewcode-block" id="read"><a class="viewcode-back" href="../../../apidoc/smac.optimizer.pSMAC.html#smac.optimizer.pSMAC.read">[docs]</a><span class="k">def</span> <span class="nf">read</span><span class="p">(</span><span class="n">run_history</span><span class="p">:</span> <span class="n">RunHistory</span><span class="p">,</span>
@@ -292,7 +293,8 @@
     <span class="k">for</span> <span class="n">output_directory</span> <span class="ow">in</span> <span class="n">parsed_output_dirs</span><span class="p">:</span>
         <span class="k">for</span> <span class="n">file_in_output_directory</span> <span class="ow">in</span> <span class="n">os</span><span class="o">.</span><span class="n">listdir</span><span class="p">(</span><span class="n">output_directory</span><span class="p">):</span>
             <span class="n">match</span> <span class="o">=</span> <span class="n">re</span><span class="o">.</span><span class="n">match</span><span class="p">(</span><span class="n">RUNHISTORY_RE</span><span class="p">,</span> <span class="n">file_in_output_directory</span><span class="p">)</span>
-            <span class="k">if</span> <span class="n">match</span><span class="p">:</span>
+            <span class="n">valid_match</span> <span class="o">=</span> <span class="n">re</span><span class="o">.</span><span class="n">match</span><span class="p">(</span><span class="n">VALIDATEDRUNHISTORY_RE</span><span class="p">,</span> <span class="n">file_in_output_directory</span><span class="p">)</span>
+            <span class="k">if</span> <span class="n">match</span> <span class="ow">or</span> <span class="n">valid_match</span><span class="p">:</span>
                 <span class="n">runhistory_file</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">output_directory</span><span class="p">,</span>
                                                <span class="n">file_in_output_directory</span><span class="p">)</span>
                 <span class="n">run_history</span><span class="o">.</span><span class="n">update_from_json</span><span class="p">(</span><span class="n">runhistory_file</span><span class="p">,</span>
@@ -305,7 +307,7 @@
                 <span class="n">numruns_in_runhistory</span> <span class="o">=</span> <span class="n">new_numruns_in_runhistory</span>
 
     <span class="n">difference</span> <span class="o">=</span> <span class="n">numruns_in_runhistory</span> <span class="o">-</span> <span class="n">initial_numruns_in_runhistory</span>
-    <span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s1">&#39;Shared model mode: Finished loading new runs, found </span><span class="si">%d</span><span class="s1"> new &#39;</span>
+    <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s1">&#39;Shared model mode: Finished loading new runs, found </span><span class="si">%d</span><span class="s1"> new &#39;</span>
                  <span class="s1">&#39;runs.&#39;</span> <span class="o">%</span> <span class="n">difference</span><span class="p">)</span></div>
 
 
