Pushing the docs for revision for branch: development, commit de58c39c81221be02f62ec7edc4c99671ef75821, folder: dev

--- a/dev/options.html
+++ b/dev/options.html
@@ -340,7 +340,7 @@ See the Main and SMAC Options below. Find the Scenario Options in the next secti
 </tr>
 <tr class="field-odd field"><th class="field-name">minR:</th><td class="field-body">Minimum number of calls per configuration. Default: 1.</td>
 </tr>
-<tr class="field-even field"><th class="field-name">output_dir:</th><td class="field-body">Specifies the output-directory for all emerging files, such as logging and results. Default: smac3-output_2018-06-12_16:22:36_509495.</td>
+<tr class="field-even field"><th class="field-name">output_dir:</th><td class="field-body">Specifies the output-directory for all emerging files, such as logging and results. Default: smac3-output_2018-06-13_14:31:10_256747.</td>
 </tr>
 <tr class="field-odd field"><th class="field-name" colspan="2">random_configuration_chooser:</th></tr>
 <tr class="field-odd field"><td>&#160;</td><td class="field-body">path to a python module containing a class`RandomConfigurationChooserImpl` implementingthe interface of <cite>RandomConfigurationChooser</cite></td>
@@ -367,6 +367,8 @@ See the Main and SMAC Options below. Find the Scenario Options in the next secti
 </tr>
 <tr class="field-even field"><th class="field-name" colspan="2">sls_n_steps_plateau_walk:</th></tr>
 <tr class="field-even field"><td>&#160;</td><td class="field-body">Maximum number of steps on plateaus during the optimization of the acquisition function. Default: 10.</td>
+</tr>
+<tr class="field-odd field"><th class="field-name">use_ta_time:</th><td class="field-body">Instead of measuring SMAC’s wallclock time, only consider time reported by the target algorithm (ta).</td>
 </tr>
 </tbody>
 </table>
